# ai_workshop_mcp

./: README.md  ai_workshop.py  pyproject.toml  requirements.txt
ai_workshop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
